[package]
name = "pprof-integration"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/harsssh/pprof-integration-rs"
description = "Integrating pprof with various web frameworks in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.8.0", optional = true }
axum = { version = "0.7.5", optional = true } 
rocket = { version = "0.5.1", optional = true }
flate2 = "1.0.30"
pprof = { version = "0.13.0", features = ["flamegraph", "protobuf-codec"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }

[features]
default = ["actix-web"]
actix-web = ["dep:actix-web"]
axum = ["dep:axum"]
rocket = ["dep:rocket"]

[[example]]
name = "actix-web"
path = "examples/actix-web.rs"
required-features = ["actix-web"]

[[example]]
name = "rocket"
path = "examples/rocket.rs"
required-features = ["rocket"]
